UI: Add pagination to admin table & fix navbar spacing

--- a/css/admin.css
+++ b/css/admin.css
@@ -6,6 +6,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding-top: 0;
 }
 
 .admin-login-container {
